--- a/career.html
+++ b/career.html
@@ -113,25 +113,29 @@
 
         <section class="course-section">
             <h2 class="course-title">卒業生の声</h2>
-            <div class="content-block">
-                <div class="two-column">
-                    <div class="column">
-                        <div class="achievement-box">
-                            <h5>国立大学合格 Aさん</h5>
-                            <p>「学習センターでの自習が合格の決め手でした。先生方のきめ細かなサポートに感謝しています。」</p>
-                        </div>
-                    </div>
-                    <div class="column">
-                        <div class="achievement-box">
-                            <h5>有名私立大学合格 Bさん</h5>
-                            <p>「ゼミ活動を通して自分の武器を見つけることができました。探究学習の時間は一生の財産です。」</p>
-                        </div>
-                    </div>
+            <div class="interview-list" style="display: flex; flex-wrap: wrap; gap: 20px;">
+                <!-- Person 1 -->
+                <div class="interview-card"
+                    style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生A（特進コース）</div>
+                    <h3>茨城大学 合格</h3>
+                    <p>明確な目標を立て、最後まで諦めずに努力しました。</p>
+                    <a href="interview_detail.html"
+                        style="display: inline-block; margin-top: 10px; color: #333; text-decoration: underline;">インタビューを読む</a>
                 </div>
-                <div class="center-text" style="margin-top: 30px;">
-                    <a href="#"><button
-                            style="padding: 15px 30px; font-size: 1.1em; cursor: pointer; background: #666; color: #fff; border: none; border-radius: 4px;">卒業生の声を見る</button></a>
+                <!-- Person 2 -->
+                <div class="interview-card"
+                    style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
+                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生B（総合進学コース）</div>
+                    <h3>〇〇大学 合格</h3>
+                    <p>部活と両立しながら第一志望に合格することができました。</p>
+                    <a href="interview_detail.html"
+                        style="display: inline-block; margin-top: 10px; color: #333; text-decoration: underline;">インタビューを読む</a>
                 </div>
+            </div>
+            <div class="center-text" style="margin-top: 30px;">
+                <a href="interview.html"><button
+                        style="padding: 15px 30px; font-size: 1.1em; cursor: pointer; background: #666; color: #fff; border: none; border-radius: 4px;">卒業生の声一覧を見る</button></a>
             </div>
         </section>
 
