--- a/interview_detail.html
+++ b/interview_detail.html
@@ -15,6 +15,7 @@
             <nav class="main-nav">
                 <a href="index.html"><button>トップ</button></a>
                 <a href="news.html"><button>お知らせ</button></a>
+                <a href="admission.html"><button>受験生案内</button></a>
                 <a href="course.html"><button>コース紹介</button></a>
                 <a href="about.html"><button>学校紹介</button></a>
                 <a href="school_life.html"><button>学校生活</button></a>
