Add hierarchical navigation to top page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,81 @@
             <p class="welcome-text"></p>
         </section>
 
+        <!-- Hierarchical Navigation Section -->
+        <section class="hierarchy-nav-section"
+            style="margin: 40px 0; padding: 30px; background-color: #f9f9f9; border-radius: 8px; border-top: 4px solid #333;">
+            <h2 style="font-size: 1.4em; margin-bottom: 25px; border-bottom: 1px solid #ddd; padding-bottom: 10px;">
+                サイトマップ（階層ナビゲーション）</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px;">
+
+                <div>
+                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
+                        <a href="admission.html"
+                            style="color: #333; text-decoration: none; font-weight: bold;">受験生案内</a></h4>
+                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
+                        <li><a href="admission.html" style="color: #555; text-decoration: none;">├ 学校案内・データブック</a></li>
+                        <li><a href="admission.html" style="color: #555; text-decoration: none;">├ 出願・入試関係書類</a></li>
+                        <li><a href="admission.html" style="color: #555; text-decoration: none;">└ 個別相談会・Q&A</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
+                        <a href="course.html" style="color: #333; text-decoration: none; font-weight: bold;">コース紹介</a>
+                    </h4>
+                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
+                        <li><a href="course.html" style="color: #555; text-decoration: none;">├ 特進選抜コース</a></li>
+                        <li><a href="course.html" style="color: #555; text-decoration: none;">├ 特進コース</a></li>
+                        <li><a href="course.html" style="color: #555; text-decoration: none;">└ 総合進学コース</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
+                        <a href="about.html" style="color: #333; text-decoration: none; font-weight: bold;">学校紹介</a>
+                    </h4>
+                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
+                        <li><a href="about.html" style="color: #555; text-decoration: none;">├ 校長挨拶・沿革</a></li>
+                        <li><a href="about.html" style="color: #555; text-decoration: none;">├ 施設・設備</a></li>
+                        <li><a href="about.html" style="color: #555; text-decoration: none;">└ アクセス</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
+                        <a href="school_life.html"
+                            style="color: #333; text-decoration: none; font-weight: bold;">学校生活</a></h4>
+                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
+                        <li><a href="school_life.html" style="color: #555; text-decoration: none;">├ 年間行事</a></li>
+                        <li><a href="school_life.html" style="color: #555; text-decoration: none;">├ 制服紹介</a></li>
+                        <li><a href="school_life.html" style="color: #555; text-decoration: none;">└ 一日の流れ</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
+                        <a href="career.html" style="color: #333; text-decoration: none; font-weight: bold;">進路指導</a>
+                    </h4>
+                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
+                        <li><a href="career.html" style="color: #555; text-decoration: none;">├ 進路指導体制</a></li>
+                        <li><a href="career.html" style="color: #555; text-decoration: none;">├ 大学合格実績</a></li>
+                        <li><a href="interview.html" style="color: #555; text-decoration: none;">└ 卒業生の声</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
+                        <a href="club.html" style="color: #333; text-decoration: none; font-weight: bold;">部活動</a></h4>
+                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
+                        <li><a href="club.html" style="color: #555; text-decoration: none;">├ 運動部</a></li>
+                        <li><a href="club.html" style="color: #555; text-decoration: none;">├ 文化部</a></li>
+                        <li><a href="club.html" style="color: #555; text-decoration: none;">└ 主な戦績</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
+
         <!-- Target Audience Sections -->
         <section class="audience-section">
 
