Add header dropdown navigation to top page

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
         <!-- Learning Center Section -->
         <section id="learning-center" class="course-section">
-            <h2 class="course-title">学習センター</h2>
+            <h2 class="course-title" id="learning_center">学習センター</h2>
             <div class="main-hero-placeholder">学習センター全景 (写真)</div>
 
             <div class="content-block center-text">
@@ -87,7 +87,7 @@
 
         <!-- Principal / History Section -->
         <section id="principal-history" class="course-section">
-            <h2 class="course-title">校長・沿革</h2>
+            <h2 class="course-title" id="history">校長・沿革</h2>
 
             <div class="content-block">
                 <div class="two-column">
