--- a/club.html
+++ b/club.html
@@ -59,7 +59,7 @@
 
         <!-- Wrestling Club -->
         <section id="wrestling" class="course-section">
-            <h2 class="course-title">レスリング部</h2>
+            <h2 class="course-title" id="wrestling">レスリング部</h2>
 
             <div class="club-info-container">
                 <div class="club-header-info">
@@ -99,7 +99,7 @@
 
         <!-- Kendo Club -->
         <section id="kendo" class="course-section">
-            <h2 class="course-title">剣道部</h2>
+            <h2 class="course-title" id="kendo">剣道部</h2>
             <div class="content-block">
                 <div class="two-column">
                     <div class="column">
