--- a/course.html
+++ b/course.html
@@ -38,7 +38,7 @@
 
         <!-- Special Advanced Selection Course -->
         <section id="special-advanced" class="course-section">
-            <h2 class="course-title">特進選抜</h2>
+            <h2 class="course-title" id="tokushin_senbatsu">特進選抜</h2>
 
             <div class="content-block">
                 <h3>目標・実績</h3>
@@ -111,7 +111,7 @@
 
         <!-- Advanced Course -->
         <section id="advanced" class="course-section">
-            <h2 class="course-title">特進</h2>
+            <h2 class="course-title" id="tokushin">特進</h2>
 
             <div class="content-block">
                 <h3>目標・実績</h3>
@@ -182,7 +182,7 @@
 
         <!-- Comprehensive Advancement Course -->
         <section id="comprehensive" class="course-section">
-            <h2 class="course-title">総合進学</h2>
+            <h2 class="course-title" id="sogo">総合進学</h2>
 
             <div class="content-block">
                 <h3>目標・実績</h3>
