--- a/school_life.html
+++ b/school_life.html
@@ -33,7 +33,7 @@
 
         <!-- Annual Events Section -->
         <section id="annual-events" class="course-section">
-            <h2 class="course-title">Annual Events <年間行事>
+            <h2 class="course-title" id="annual_events">Annual Events <年間行事>
             </h2>
 
             <div class="content-block">
@@ -152,7 +152,7 @@
 
         <!-- Uniform Section -->
         <section id="uniform" class="course-section">
-            <h2 class="course-title">School Uniform <制服紹介>
+            <h2 class="course-title" id="uniform">School Uniform <制服紹介>
             </h2>
             <img src="img/uniform.jpg" alt="制服紹介"
                 style="width: 100%; max-width: 1200px; height: auto; display: block; margin: 20px auto;">
@@ -169,7 +169,7 @@
 
         <!-- Anti-Bullying Policy Section -->
         <section class="course-section">
-            <h2 class="course-title">いじめ防止基本方針</h2>
+            <h2 class="course-title" id="anti_bullying">いじめ防止基本方針</h2>
 
             <div class="content-block">
                 <h3 style="text-align: center; color: #c00; margin-bottom: 20px;">霞ヶ浦高校は「いじめ」を絶対に許しません！</h3>
@@ -186,7 +186,7 @@
 
         <!-- Truancy Prevention Policy Section -->
         <section class="course-section">
-            <h2 class="course-title">不登校未然防止の基本方針</h2>
+            <h2 class="course-title" id="anti_truancy">不登校未然防止の基本方針</h2>
 
             <div class="content-block">
                 <p>不登校問題は、現在、本校において重要課題であります。不登校は、生徒自身が問題に向き合い、主体的に解決していくことで初めて、本当の意味で克服されます。ただ「学校に登校する」という結果のみを目標にするのではなく、学校や家庭、地域がそれぞれ連携して、生徒が自らの進路を主体的に捉え、社会的に自立することを目指す必要があると考えています。そのために生徒の気持ちに向き合い、保護者に寄り添った形の支援をします。
