--- a/career.html
+++ b/career.html
@@ -32,7 +32,7 @@
     <main class="container">
 
         <section class="course-section">
-            <h2 class="course-title">キャリアを拓く3年間</h2>
+            <h2 class="course-title" id="career_path">キャリアを拓く3年間</h2>
             <div class="content-block">
                 <p>高校生活は「自己理解から自己表現までの3年間である」と言われます。自己をよく見つめ，卒業後の希望や目標を決定し，各々の進路実現に向けて歩み出す重要な期間です。そのためにも1～2年次からしっかりと将来を見つめ，毎日の学校生活を送っていく事が大切です。
                 </p>
@@ -100,7 +100,7 @@
         <hr>
 
         <section class="course-section">
-            <h2 class="course-title">最近５年間の合格大学（浪人含む）</h2>
+            <h2 class="course-title" id="results">最近５年間の合格大学（浪人含む）</h2>
             <div class="content-block center-text">
                 <div class="image-placeholder" style="height: 300px;">合格実績一覧 (表・ロゴなど)</div>
                 <div style="margin-top: 20px;">
@@ -113,7 +113,7 @@
         <hr>
 
         <section class="course-section">
-            <h2 class="course-title">卒業生の声</h2>
+            <h2 class="course-title" id="interview">卒業生の声</h2>
             <div class="interview-list" style="display: flex; flex-wrap: wrap; gap: 20px;">
                 <!-- Person 1 -->
                 <div class="interview-card"
