Add contact portal and 3 specific form pages

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <header>
         <div class="container">
-                        <nav class="main-nav">
+            <nav class="main-nav">
                 <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
                 <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
-                
+
                 <div class="nav-item has-dropdown">
                     <a href="admission.html"><button>受験生案内 <span class="dropdown-arrow">▼</span></button></a>
                     <div class="dropdown-menu">
@@ -68,11 +68,12 @@
                     <div class="dropdown-menu">
                         <a href="club.html#sports">運動部</a>
                         <a href="club.html#culture">文化部</a>
-                        </div>
+                    </div>
                 </div>
 
                 <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 <div class="nav-item"><a href="recruit.html"><button>教員採用</button></a></div>
+                <div class="nav-item"><a href="contact.html"><button>お問い合わせ</button></a></div>
             </nav>
             <h1>霞ヶ浦高等学校</h1>
             <div class="main-hero-placeholder">メインビジュアル (学校全体の雰囲気)</div>
@@ -97,7 +98,8 @@
                 <div>
                     <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
                         <a href="admission.html"
-                            style="color: #333; text-decoration: none; font-weight: bold;">受験生案内</a></h4>
+                            style="color: #333; text-decoration: none; font-weight: bold;">受験生案内</a>
+                    </h4>
                     <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
                         <li><a href="admission.html" style="color: #555; text-decoration: none;">├ 学校案内・データブック</a></li>
                         <li><a href="admission.html" style="color: #555; text-decoration: none;">├ 出願・入試関係書類</a></li>
@@ -130,7 +132,8 @@
                 <div>
                     <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
                         <a href="school_life.html"
-                            style="color: #333; text-decoration: none; font-weight: bold;">学校生活</a></h4>
+                            style="color: #333; text-decoration: none; font-weight: bold;">学校生活</a>
+                    </h4>
                     <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
                         <li><a href="school_life.html" style="color: #555; text-decoration: none;">├ 年間行事</a></li>
                         <li><a href="school_life.html" style="color: #555; text-decoration: none;">├ 制服紹介</a></li>
@@ -151,7 +154,8 @@
 
                 <div>
                     <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
-                        <a href="club.html" style="color: #333; text-decoration: none; font-weight: bold;">部活動</a></h4>
+                        <a href="club.html" style="color: #333; text-decoration: none; font-weight: bold;">部活動</a>
+                    </h4>
                     <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
                         <li><a href="club.html" style="color: #555; text-decoration: none;">├ 運動部</a></li>
                         <li><a href="club.html" style="color: #555; text-decoration: none;">├ 文化部</a></li>
