--- a/interview.html
+++ b/interview.html
@@ -15,7 +15,7 @@
             <nav class="main-nav">
                 <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
                 <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
-                
+
                 <div class="nav-item has-dropdown">
                     <a href="admission.html"><button>受験生案内 <span class="dropdown-arrow">▼</span></button></a>
                     <div class="dropdown-menu">
@@ -68,11 +68,12 @@
                     <div class="dropdown-menu">
                         <a href="club.html#sports">運動部</a>
                         <a href="club.html#culture">文化部</a>
-                        </div>
+                    </div>
                 </div>
 
                 <div class="nav-item"><a href="interview.html"><button class="active">卒業生の声</button></a></div>
                 <div class="nav-item"><a href="recruit.html"><button>教員採用</button></a></div>
+                <div class="nav-item"><a href="contact.html"><button>お問い合わせ</button></a></div>
             </nav>
             <h1>卒業生インタビュー</h1>
         </div>
