--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <nav class="main-nav">
                 <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
                 <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
-                
+
                 <div class="nav-item has-dropdown">
                     <a href="admission.html"><button>受験生案内 <span class="dropdown-arrow">▼</span></button></a>
                     <div class="dropdown-menu">
@@ -68,11 +68,12 @@
                     <div class="dropdown-menu">
                         <a href="club.html#sports">運動部</a>
                         <a href="club.html#culture">文化部</a>
-                        </div>
+                    </div>
                 </div>
 
                 <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 <div class="nav-item"><a href="recruit.html"><button>教員採用</button></a></div>
+                <div class="nav-item"><a href="contact.html"><button>お問い合わせ</button></a></div>
             </nav>
             <h1>学校紹介・施設案内</h1>
             <img src="img/facility.jpg" alt="学校施設案内"
