Add missing Hub pages and sections

--- a/index.html
+++ b/index.html
@@ -259,46 +259,82 @@
                             <a href="about.html">学校紹介</a>
                             <a href="#">お問い合わせ</a>
                         </div>
-                    </div>
-                </div>
-            </div>
+                        <!-- Large Card 1 -->
+                        <a href="hub_admission.html" class="audience-card-large"
+                            style="text-decoration: none; color: inherit;">
+                            <div class="card-image-wrapper">
+                                <div class="image-placeholder">受験生</div>
+                            </div>
+                            <div class="card-content-wrapper">
+                                <h3 class="audience-title-large">受験生の方へ</h3>
+                                <p class="audience-description">学校説明会や募集要項などの最新情報をご案内します。</p>
+                                <div class="link-highlight-box">
+                                    <span class="highlight-link">募集要項・出願 &rarr;</span>
+                                </div>
+                                <div class="sub-links">
+                                    <span>► オープンスクール</span>
+                                    <span>► 過去問題</span>
+                                    <span>► よくある質問</span>
+                                </div>
+                            </div>
+                        </a>
 
-            <!-- Bottom Row: Alumni and Teacher Recruitment -->
-            <div class="bottom-cards-row">
-                <!-- For Alumni -->
-                <div class="audience-card-small">
-                    <div class="card-image-wrapper-small">
-                        <div class="image-placeholder" style="height: 200px;">卒業生イメージ（卒業式・同窓会の様子）</div>
-                    </div>
-                    <div class="card-content-wrapper-small">
-                        <h3 class="audience-title-small"></h3>
-                        <p class="audience-description-small"></p>
+                        <!-- Large Card 2 -->
+                        <a href="hub_parents.html" class="audience-card-large"
+                            style="text-decoration: none; color: inherit;">
+                            <div class="card-image-wrapper">
+                                <div class="image-placeholder">在校生・保護者</div>
+                            </div>
+                            <div class="card-content-wrapper">
+                                <h3 class="audience-title-large">在校生・保護者の方へ</h3>
+                                <p class="audience-description">学校生活や必要な手続き、お知らせなどをご確認いただけます。</p>
+                                <div class="link-highlight-box">
+                                    <span class="highlight-link">欠席連絡・お問い合わせ &rarr;</span>
+                                </div>
+                                <div class="sub-links">
+                                    <span>► 年間行事予定</span>
+                                    <span>► カフェテリアメニュー</span>
+                                    <span>► 各種証明書</span>
+                                </div>
+                            </div>
+                        </a>
 
-                        <div class="small-links">
-                            <a href="#" class="small-link">▪ 卒業証明書申請</a>
-                            <a href="#" class="small-link">▪ 成績証明書申請</a>
-                            <a href="#" class="small-link">▪ 料金・支払い案内</a>
-                            <a href="#" class="small-link">▪ お問い合わせ</a>
+                        <!-- Bottom Row: Alumni and Teacher Recruitment -->
+                        <div class="bottom-cards-row">
+                            <!-- For Alumni -->
+                            <div class="audience-card-small">
+                                <div class="card-image-wrapper-small">
+                                    <div class="image-placeholder" style="height: 200px;">卒業生イメージ（卒業式・同窓会の様子）</div>
+                                </div>
+                                <div class="card-content-wrapper-small">
+                                    <h3 class="audience-title-small"></h3>
+                                    <p class="audience-description-small"></p>
+
+                                    <div class="small-links">
+                                        <a href="#" class="small-link">▪ 卒業証明書申請</a>
+                                        <a href="#" class="small-link">▪ 成績証明書申請</a>
+                                        <a href="#" class="small-link">▪ 料金・支払い案内</a>
+                                        <a href="#" class="small-link">▪ お問い合わせ</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- For Teacher Recruitment -->
+                            <div class="audience-card-small">
+                                <div class="card-image-wrapper-small">
+                                    <div class="image-placeholder" style="height: 200px;">教員イメージ（授業・職員室の様子）</div>
+                                </div>
+                                <div class="card-content-wrapper-small">
+                                    <h3 class="audience-title-small"></h3>
+                                    <p class="audience-description-small"></p>
+
+                                    <div class="small-links">
+                                        <a href="#" class="small-link">▪ 採用案内（PDF）</a>
+                                        <a href="#" class="small-link">▪ お問い合わせ</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-
-                <!-- For Teacher Recruitment -->
-                <div class="audience-card-small">
-                    <div class="card-image-wrapper-small">
-                        <div class="image-placeholder" style="height: 200px;">教員イメージ（授業・職員室の様子）</div>
-                    </div>
-                    <div class="card-content-wrapper-small">
-                        <h3 class="audience-title-small"></h3>
-                        <p class="audience-description-small"></p>
-
-                        <div class="small-links">
-                            <a href="#" class="small-link">▪ 採用案内（PDF）</a>
-                            <a href="#" class="small-link">▪ お問い合わせ</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </section>
 
