--- a/about.html
+++ b/about.html
@@ -185,8 +185,35 @@
 
 
             </div>
-        </section>
 
+            <!-- Access Section (Missing Requirement B-3, C-2) -->
+            <h2 id="access" class="course-title" style="margin-top: 60px;">アクセス（交通案内）</h2>
+            <div class="content-block two-column">
+                <div class="column">
+                    <h3 style="font-size: 1.2em; border-left: 4px solid #333; padding-left: 10px; margin-bottom: 20px;">
+                        交通機関のご案内</h3>
+                    <ul class="feature-list" style="line-height: 1.8;">
+                        <li>JR常磐線「神立駅」から徒歩またはバス</li>
+                        <li>JR常磐線「土浦駅」からバス</li>
+                        <li>各方面からのスクールバスを運行（詳細要確認）</li>
+                    </ul>
+                    <div style="margin-top: 20px; padding: 15px; background-color: #f5f5f5; border: 1px solid #ddd;">
+                        <strong>霞ヶ浦高等学校</strong><br>
+                        〒300-0000 茨城県かすみがうら市○○町1-2-3<br>
+                        TEL: 029-887-0013 / FAX: 029-887-XXXX
+                    </div>
+                </div>
+                <div class="column" style="min-width: 400px;">
+                    <!-- Google Maps Iframe Placeholder -->
+                    <div
+                        style="width: 100%; height: 300px; background-color: #e9e9e9; border: 1px solid #ccc; display: flex; justify-content: center; align-items: center; text-align: center; color: #666;">
+                        <span style="font-size: 1.2em; font-weight: bold;">Google
+                            Maps<br>(実際のマップiframeがここに埋め込まれます)</span>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </main>
 
     <footer>
