feat: implement two-tier navigation and monochrome design for top page

--- a/about.html
+++ b/about.html
@@ -11,71 +11,87 @@
 <body>
 
     <header>
-        <div class="container">
-            <nav class="main-nav">
-                <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
-                <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
-
-                <div class="nav-item has-dropdown">
-                    <a href="admission.html"><button>受験生案内 <span class="dropdown-arrow">▼</span></button></a>
-                    <div class="dropdown-menu">
-                        <a href="admission.html#guide">学校案内・データブック</a>
-                        <a href="admission.html#application">出願・入試関係書類</a>
-                        <a href="admission.html#consultation">個別相談会日程</a>
-                        <a href="admission.html#faq">よくあるご質問</a>
-                    </div>
+        <div class="top-header">
+            <div class="top-nav-container">
+                <div class="top-nav-list">
+                    <a href="#">受験生の方へ</a>
+                    <span class="top-nav-divider">|</span>
+                    <a href="#">在校生・保護者の方へ</a>
+                    <span class="top-nav-divider">|</span>
+                    <a href="#">卒業生の方へ</a>
+                    <span class="top-nav-divider">|</span>
+                    <a href="recruit.html">教員採用情報</a>
+                    <a href="contact.html" class="top-contact-btn">お問合せ</a>
                 </div>
+            </div>
+        </div>
+        <div class="main-header">
+            <div class="container">
+                <h1>学校紹介・施設案内</h1>
+                <nav class="main-nav">
+                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
+                    <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
-                <div class="nav-item has-dropdown">
-                    <a href="course.html"><button>コース紹介 <span class="dropdown-arrow">▼</span></button></a>
-                    <div class="dropdown-menu">
-                        <a href="course.html#tokushin_senbatsu">特進選抜コース</a>
-                        <a href="course.html#tokushin">特進コース</a>
-                        <a href="course.html#sogo">総合進学コース</a>
+                    <div class="nav-item has-dropdown">
+                        <a href="admission.html"><button>受験生案内 <span class="dropdown-arrow">▼</span></button></a>
+                        <div class="dropdown-menu">
+                            <a href="admission.html#guide">学校案内・データブック</a>
+                            <a href="admission.html#application">出願・入試関係書類</a>
+                            <a href="admission.html#consultation">個別相談会日程</a>
+                            <a href="admission.html#faq">よくあるご質問</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="nav-item has-dropdown">
-                    <a href="about.html"><button class="active">学校紹介 <span class="dropdown-arrow">▼</span></button></a>
-                    <div class="dropdown-menu">
-                        <a href="about.html#history">校長挨拶・沿革</a>
-                        <a href="about.html#learning_center">学習センター</a>
-                        <a href="about.html#facilities">施設・設備</a>
+                    <div class="nav-item has-dropdown">
+                        <a href="course.html"><button>コース紹介 <span class="dropdown-arrow">▼</span></button></a>
+                        <div class="dropdown-menu">
+                            <a href="course.html#tokushin_senbatsu">特進選抜コース</a>
+                            <a href="course.html#tokushin">特進コース</a>
+                            <a href="course.html#sogo">総合進学コース</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="nav-item has-dropdown">
-                    <a href="school_life.html"><button>学校生活 <span class="dropdown-arrow">▼</span></button></a>
-                    <div class="dropdown-menu">
-                        <a href="school_life.html#annual_events">年間スケジュール</a>
-                        <a href="school_life.html#uniform">制服</a>
-                        <a href="school_life.html#anti_bullying">いじめ防止基本方針</a>
-                        <a href="school_life.html#anti_truancy">不登校未然防止方針</a>
+                    <div class="nav-item has-dropdown">
+                        <a href="about.html"><button class="active">学校紹介 <span class="dropdown-arrow">▼</span></button></a>
+                        <div class="dropdown-menu">
+                            <a href="about.html#history">校長挨拶・沿革</a>
+                            <a href="about.html#learning_center">学習センター</a>
+                            <a href="about.html#facilities">施設・設備</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="nav-item has-dropdown">
-                    <a href="career.html"><button>進路指導 <span class="dropdown-arrow">▼</span></button></a>
-                    <div class="dropdown-menu">
-                        <a href="career.html#career_path">進路指導体制</a>
-                        <a href="career.html#results">大学合格実績</a>
-                        <a href="career.html#interview">卒業生の声</a>
+                    <div class="nav-item has-dropdown">
+                        <a href="school_life.html"><button>学校生活 <span class="dropdown-arrow">▼</span></button></a>
+                        <div class="dropdown-menu">
+                            <a href="school_life.html#annual_events">年間スケジュール</a>
+                            <a href="school_life.html#uniform">制服</a>
+                            <a href="school_life.html#anti_bullying">いじめ防止基本方針</a>
+                            <a href="school_life.html#anti_truancy">不登校未然防止方針</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="nav-item has-dropdown">
-                    <a href="club.html"><button>部活動 <span class="dropdown-arrow">▼</span></button></a>
-                    <div class="dropdown-menu">
-                        <a href="club.html#sports">運動部</a>
-                        <a href="club.html#culture">文化部</a>
+                    <div class="nav-item has-dropdown">
+                        <a href="career.html"><button>進路指導 <span class="dropdown-arrow">▼</span></button></a>
+                        <div class="dropdown-menu">
+                            <a href="career.html#career_path">進路指導体制</a>
+                            <a href="career.html#results">大学合格実績</a>
+                            <a href="career.html#interview">卒業生の声</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
-                <div class="nav-item"><a href="recruit.html"><button>教員採用</button></a></div>
-                <div class="nav-item"><a href="contact.html"><button>お問い合わせ</button></a></div>
-            </nav>
-            <h1>学校紹介・施設案内</h1>
+                    <div class="nav-item has-dropdown">
+                        <a href="club.html"><button>部活動 <span class="dropdown-arrow">▼</span></button></a>
+                        <div class="dropdown-menu">
+                            <a href="club.html#sports">運動部</a>
+                            <a href="club.html#culture">文化部</a>
+                        </div>
+                    </div>
+
+                    <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
+                </nav>
+            </div>
+        </div>
+        <div class="container" style="padding-top: 0;">
             <img src="img/facility.jpg" alt="学校施設案内"
                 style="width: 100%; max-width: 1200px; height: auto; display: block; margin: 20px auto;">
         </div>
