--- a/school_life.html
+++ b/school_life.html
@@ -21,7 +21,11 @@
                     <a href="#">卒業生の方へ</a>
                     <span class="top-nav-divider">|</span>
                     <a href="recruit.html">教員採用情報</a>
-                    <a href="contact.html" class="top-contact-btn">お問合せ</a>
+                    <div class="top-search">
+                        <span class="search-icon">🔍</span>
+                        <input type="text" placeholder="検索" readonly>
+                    </div>
+                    <a href="contact.html" class="top-contact-btn">資料請求・お問い合わせ</a>
                 </div>
             </div>
         </div>
