feat: move h1 titles above main visual and remove placeholder text

--- a/about.html
+++ b/about.html
@@ -88,10 +88,11 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                <h1>学校紹介・施設案内</h1>
+                
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
+            <h1>学校紹介・施設案内</h1>
             <img src="img/facility.jpg" alt="学校施設案内"
                 style="width: 100%; max-width: 1200px; height: auto; display: block; margin: 20px auto;">
         </div>
@@ -102,7 +103,7 @@
         <!-- Learning Center Section -->
         <section id="learning-center" class="course-section">
             <h2 class="course-title" id="learning_center">学習センター</h2>
-            <div class="main-hero-placeholder">学習センター全景 (写真)</div>
+            <div class="main-hero-placeholder"></div>
 
             <div class="content-block center-text">
                 <h3>自宅でもない、塾でもない、あなたのための学習空間</h3>
