--- a/admission.html
+++ b/admission.html
@@ -88,11 +88,12 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                <h1>受験生案内</h1>
+                
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <div class="main-hero-placeholder">受験生案内イメージ (学校案内パンフレット等)</div>
+            <h1>受験生案内</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
