--- a/contact.html
+++ b/contact.html
@@ -88,11 +88,12 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                <h1>お問い合わせ窓口</h1>
+                
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <div class="main-hero-placeholder">お問い合わせイメージ (事務室・受付窓口の様子)</div>
+            <h1>お問い合わせ窓口</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
