--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                <h1>霞ヶ浦高等学校</h1>
+                
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <div class="main-hero-placeholder">メインビジュアル (学校全体の雰囲気)</div>
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
