--- a/school_life.html
+++ b/school_life.html
@@ -88,11 +88,12 @@
 
                     <div class="nav-item"><a href="interview.html"><button>卒業生の声</button></a></div>
                 </nav>
-                <h1>学校生活</h1>
+                
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <div class="main-hero-placeholder">メインビジュアル (学校生活・生徒の様子)</div>
+            <h1>学校生活</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
