--- a/course.html
+++ b/course.html
@@ -14,11 +14,11 @@
         <div class="top-header">
             <div class="top-nav-container">
                 <div class="top-nav-list">
-                    <a href="#">受験生の方へ</a>
+                    <a href="hub_admission.html">受験生の方へ</a>
                     <span class="top-nav-divider">|</span>
-                    <a href="#">在校生・保護者の方へ</a>
+                    <a href="hub_parents.html">在校生・保護者の方へ</a>
                     <span class="top-nav-divider">|</span>
-                    <a href="#">卒業生の方へ</a>
+                    <a href="hub_alumni.html">卒業生の方へ</a>
                     <span class="top-nav-divider">|</span>
                     <a href="recruit.html">教員採用情報</a>
                     <a href="contact.html" class="top-contact-btn">お問合せ</a>
