style: exactly synchronize main navigation block across all html files to match index.html

--- a/admission.html
+++ b/admission.html
@@ -28,11 +28,11 @@
         <div class="main-header">
             <div class="container">
                 <nav class="main-nav">
-                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
+                    <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
                     <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
                     <div class="nav-item has-dropdown">
-                        <a href="admission.html"><button class="active">受験生案内 <span class="dropdown-arrow">▼</span></button></a>
+                        <a href="admission.html"><button>受験生案内 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
                             <a href="admission.html#guide">学校案内・データブック</a>
                             <a href="admission.html#application">出願・入試関係書類</a>
