--- a/course.html
+++ b/course.html
@@ -28,7 +28,7 @@
         <div class="main-header">
             <div class="container">
                 <nav class="main-nav">
-                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
+                    <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
                     <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
                     <div class="nav-item has-dropdown">
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="nav-item has-dropdown">
-                        <a href="course.html"><button class="active">コース紹介 <span class="dropdown-arrow">▼</span></button></a>
+                        <a href="course.html"><button>コース紹介 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
                             <a href="course.html#tokushin_senbatsu">特進選抜コース</a>
                             <a href="course.html#tokushin">特進コース</a>
