--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <div class="main-header">
             <div class="container">
                 <nav class="main-nav">
-                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
+                    <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
                     <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
                     <div class="nav-item has-dropdown">
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="nav-item has-dropdown">
-                        <a href="about.html"><button class="active">学校紹介 <span class="dropdown-arrow">▼</span></button></a>
+                        <a href="about.html"><button>学校紹介 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
                             <a href="about.html#history">校長挨拶・沿革</a>
                             <a href="about.html#learning_center">学習センター</a>
