--- a/career.html
+++ b/career.html
@@ -28,7 +28,7 @@
         <div class="main-header">
             <div class="container">
                 <nav class="main-nav">
-                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
+                    <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
                     <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
                     <div class="nav-item has-dropdown">
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="nav-item has-dropdown">
-                        <a href="career.html"><button class="active">進路指導 <span class="dropdown-arrow">▼</span></button></a>
+                        <a href="career.html"><button>進路指導 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
                             <a href="career.html#career_path">進路指導体制</a>
                             <a href="career.html#results">大学合格実績</a>
