--- a/club.html
+++ b/club.html
@@ -28,7 +28,7 @@
         <div class="main-header">
             <div class="container">
                 <nav class="main-nav">
-                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
+                    <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
                     <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
                     <div class="nav-item has-dropdown">
@@ -79,7 +79,7 @@
                     </div>
 
                     <div class="nav-item has-dropdown">
-                        <a href="club.html"><button class="active">部活動 <span class="dropdown-arrow">▼</span></button></a>
+                        <a href="club.html"><button>部活動 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
                             <a href="club.html#sports">運動部</a>
                             <a href="club.html#culture">文化部</a>
