--- a/header_template.html
+++ b/header_template.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="ja">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>卒業生インタビュー - 霞ヶ浦高等学校</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
     <header>
         <div class="top-header">
             <div class="top-nav-container">
@@ -91,61 +79,8 @@
                 
             </div>
         </div>
-    </header>
-
-    <main class="container">
-
-        <h1>卒業生インタビュー</h1>
-        <section class="course-section">
-            <div class="interview-list" style="display: flex; flex-wrap: wrap; gap: 20px;">
-                <!-- Person 1 -->
-                <div class="interview-card"
-                    style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生A（特進コース）</div>
-                    <h3>茨城大学 合格</h3>
-                    <p>明確な目標を立て、最後まで諦めずに努力しました。</p>
-                    <a href="interview_detail.html"
-                        style="display: inline-block; margin-top: 10px; color: #333; text-decoration: underline;">インタビューを読む</a>
-                </div>
-                <!-- Person 2 -->
-                <div class="interview-card"
-                    style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生B（総合進学コース）</div>
-                    <h3>〇〇大学 合格</h3>
-                    <p>部活と両立しながら第一志望に合格することができました。</p>
-                    <a href="interview_detail.html"
-                        style="display: inline-block; margin-top: 10px; color: #333; text-decoration: underline;">インタビューを読む</a>
-                </div>
-                <!-- Person 3 -->
-                <div class="interview-card"
-                    style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生C（総合進学コース）</div>
-                    <h3>地元優良企業へ就職</h3>
-                    <p>資格取得や面接対策など、手厚いサポートに感謝しています。</p>
-                    <a href="interview_detail.html"
-                        style="display: inline-block; margin-top: 10px; color: #333; text-decoration: underline;">インタビューを読む</a>
-                </div>
-                <!-- Person 4 -->
-                <div class="interview-card"
-                    style="width: calc(50% - 10px); border: 1px solid #ddd; padding: 20px; box-sizing: border-box;">
-                    <div class="image-placeholder" style="height: 200px; margin-bottom: 15px;">卒業生D（特進コース）</div>
-                    <h3>△△大学 合格</h3>
-                    <p>先生方との距離が近く、気軽に相談できたのがよかったです。</p>
-                    <a href="interview_detail.html"
-                        style="display: inline-block; margin-top: 10px; color: #333; text-decoration: underline;">インタビューを読む</a>
-                </div>
-            </div>
-        </section>
-
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Alumni Interview</p>
+        <div class="container" style="padding-top: 0;">
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-
-</html>
+    </header>
