--- a/news.html
+++ b/news.html
@@ -28,8 +28,8 @@
         <div class="main-header">
             <div class="container">
                 <nav class="main-nav">
-                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
-                    <div class="nav-item"><a href="news.html"><button class="active">お知らせ</button></a></div>
+                    <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
+                    <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
                     <div class="nav-item has-dropdown">
                         <a href="admission.html"><button>受験生案内 <span class="dropdown-arrow">▼</span></button></a>
