--- a/school_life.html
+++ b/school_life.html
@@ -28,7 +28,7 @@
         <div class="main-header">
             <div class="container">
                 <nav class="main-nav">
-                    <div class="nav-item"><a href="index.html"><button>トップ</button></a></div>
+                    <div class="nav-item"><a href="index.html"><button class="active">トップ</button></a></div>
                     <div class="nav-item"><a href="news.html"><button>お知らせ</button></a></div>
 
                     <div class="nav-item has-dropdown">
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="nav-item has-dropdown">
-                        <a href="school_life.html"><button class="active">学校生活 <span class="dropdown-arrow">▼</span></button></a>
+                        <a href="school_life.html"><button>学校生活 <span class="dropdown-arrow">▼</span></button></a>
                         <div class="dropdown-menu">
                             <a href="school_life.html#annual_events">年間スケジュール</a>
                             <a href="school_life.html#uniform">制服</a>
