style: synchronize entire header block (both top and bottom navigation tiers) across all pages

--- a/contact_alumni.html
+++ b/contact_alumni.html
@@ -92,8 +92,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>卒業生専用 各種証明書等 申請・お問い合わせフォーム</h1>
-            <div class="main-hero-placeholder" style="height: 150px;">お問い合わせ</div>
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
