--- a/contact_parents.html
+++ b/contact_parents.html
@@ -92,8 +92,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>在校生・保護者専用 お問い合わせフォーム</h1>
-            <div class="main-hero-placeholder" style="height: 150px;">お問い合わせ</div>
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
