--- a/course.html
+++ b/course.html
@@ -92,13 +92,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>コース紹介</h1>
+            <h1>霞ヶ浦高等学校</h1>
             <div class="main-hero-placeholder"></div>
-            <nav class="sub-nav">
-                <button onclick="scrollToSection('special-advanced')">特進選抜</button>
-                <button onclick="scrollToSection('advanced')">特進</button>
-                <button onclick="scrollToSection('comprehensive')">総合進学</button>
-            </nav>
         </div>
     </header>
 
