--- a/hub_parents.html
+++ b/hub_parents.html
@@ -143,8 +143,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>在校生・保護者の方へ</h1>
-            <div class="main-hero-placeholder" style="height: 180px;">在校生・保護者向けメインビジュアル</div>
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
