--- a/interview_detail.html
+++ b/interview_detail.html
@@ -92,9 +92,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>卒業生インタビュー</h1>
-            <img src="img/interview.jpg" alt="卒業生インタビュー"
-                style="width: 100%; max-width: 1200px; height: auto; display: block; margin: 20px auto;">
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
