--- a/about.html
+++ b/about.html
@@ -92,9 +92,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>学校紹介・施設案内</h1>
-            <img src="img/facility.jpg" alt="学校施設案内"
-                style="width: 100%; max-width: 1200px; height: auto; display: block; margin: 20px auto;">
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
