--- a/hub_alumni.html
+++ b/hub_alumni.html
@@ -143,8 +143,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>卒業生の方へ</h1>
-            <div class="main-hero-placeholder" style="height: 180px;">卒業生向けメインビジュアル</div>
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
         </div>
     </header>
 
