--- a/recruit.html
+++ b/recruit.html
@@ -91,6 +91,10 @@
                 
             </div>
         </div>
+        <div class="container" style="padding-top: 0;">
+            <h1>霞ヶ浦高等学校</h1>
+            <div class="main-hero-placeholder"></div>
+        </div>
     </header>
 
     <main class="container">
