style: dynamic placeholder to set each page's title correctly in h1 tag

--- a/club.html
+++ b/club.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
+            <h1>部活動</h1>
             <div class="main-hero-placeholder"></div>
         </div>
     </header>
