--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
+            <h1>学校紹介・施設案内</h1>
             <div class="main-hero-placeholder"></div>
         </div>
     </header>
