--- a/contact_alumni.html
+++ b/contact_alumni.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
+            <h1>卒業生専用フォーム（証明書申請）</h1>
             <div class="main-hero-placeholder"></div>
         </div>
     </header>
