--- a/contact_parents.html
+++ b/contact_parents.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
+            <h1>在校生・保護者専用フォーム</h1>
             <div class="main-hero-placeholder"></div>
         </div>
     </header>
